--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   firebase_core: ^0.4.4+2
   firebase_storage: ^3.1.3
   cloud_firestore: ^0.13.4+1
+  photo_view: ^0.9.2
+  url_launcher: ^5.4.2
+  flutter_email_sender: ^3.0.1
 
 dev_dependencies:
   flutter_test:
